# Next-Token-Failures

./: pyproject.toml  requirements.txt  train.py  train.sh
data/: __init__.py  graphs.py  graphs_optim.py
models/: __init__.py  base_model.py  config.py  gpt.py  lib.py  mtp.py  top.py
utils/: training_utils.py
